force-app/main/default/objects/CampaignMember/fields/Answered_All_Polls__c.field-meta.xml
<CustomField>
    <fullName>Answered_All_Polls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user answer all the polls</description>
    <label>Answered All Polls</label>
    <type>Checkbox</type>
</CustomField>