force-app/main/default/objects/CampaignMember/fields/Answered_Any_Poll__c.field-meta.xml
<CustomField>
    <fullName>Answered_Any_Poll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user answer any of the polls</description>
    <label>Answered Any Poll</label>
    <type>Checkbox</type>
</CustomField>