force-app/main/default/objects/CampaignMember/fields/Answered_Any_Survey__c.field-meta.xml
<CustomField>
    <fullName>Answered_Any_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user answer any of the surveys (not survey questions)</description>
    <label>Answered Any Survey</label>
    <type>Checkbox</type>
</CustomField>