force-app/main/default/objects/CampaignMember/fields/Answered_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Answered_Surveys__c</fullName>
    <description>Number of surveys the user responded to (not survey questions)</description>
    <label>Answered Surveys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>