force-app/main/default/objects/CampaignMember/fields/Archive_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Archive_Viewed__c</fullName>
    <description>Number of times the attendee launched the event console during the archive/on-demand period of the event.</description>
    <label>Archive Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>