force-app/main/default/objects/CampaignMember/fields/Asked_Any_Question__c.field-meta.xml
<CustomField>
    <fullName>Asked_Any_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user asked any questions</description>
    <label>Asked Any Question</label>
    <type>Checkbox</type>
</CustomField>