force-app/main/default/objects/CampaignMember/fields/Asked_Questions__c.field-meta.xml
<CustomField>
    <fullName>Asked_Questions__c</fullName>
    <description>Number of questions the user asked</description>
    <label>Asked Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>