force-app/main/default/objects/CampaignMember/fields/Certification_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Certification_Timestamp__c</fullName>
    <description>Date and time user successfully passed certification widget</description>
    <label>Certification Timestamp</label>
    <type>DateTime</type>
</CustomField>