force-app/main/default/objects/CampaignMember/fields/Certification_Widget_Result__c.field-meta.xml
<CustomField>
    <fullName>Certification_Widget_Result__c</fullName>
    <description>C= Certified, PC: Partially certified, NC: Not certified</description>
    <label>Certification Widget Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>