force-app/main/default/objects/CampaignMember/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>ID of client account</description>
    <label>Client Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>