force-app/main/default/objects/CampaignMember/fields/CTA_Date_1__c.field-meta.xml
<CustomField>
    <fullName>CTA_Date_1__c</fullName>
    <description>Date and time user clicked on CTA widget</description>
    <label>CTA Date 1</label>
    <type>DateTime</type>
</CustomField>