force-app/main/default/objects/CampaignMember/fields/CTA_Name_3__c.field-meta.xml
<CustomField>
    <fullName>CTA_Name_3__c</fullName>
    <description>Display name of the CTA widget</description>
    <label>CTA Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>