force-app/main/default/objects/CampaignMember/fields/Cumulative_Live_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Live_Minutes__c</fullName>
    <description>Number of minutes the user attended the live portion of this event. Multiple console launches are aggregated into a single number.</description>
    <label>Cumulative Live Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>