force-app/main/default/objects/CampaignMember/fields/Demo_Conversions_Widget_Action__c.field-meta.xml
<CustomField>
    <fullName>Demo_Conversions_Widget_Action__c</fullName>
    <description>Demo action (e.g. URL of external link)</description>
    <label>Demo Conversions Widget Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>