force-app/main/default/objects/CampaignMember/fields/Demo_Conversions_Widget_Name__c.field-meta.xml
<CustomField>
    <fullName>Demo_Conversions_Widget_Name__c</fullName>
    <description>User defined name</description>
    <label>Demo Conversions Widget Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>