force-app/main/default/objects/CampaignMember/fields/Demo_Conversions_Widget_Submitted_Timest__c.field-meta.xml
<CustomField>
    <fullName>Demo_Conversions_Widget_Submitted_Timest__c</fullName>
    <description>Demo timestamp</description>
    <label>Demo Conversions Widget Submitted Timest</label>
    <type>DateTime</type>
</CustomField>