force-app/main/default/objects/CampaignMember/fields/Demo_Conversions_Widget_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Conversions_Widget_Type__c</fullName>
    <description>Always &quot;request_a_demo&quot;</description>
    <label>Demo Conversions Widget Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>