force-app/main/default/objects/CampaignMember/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>Published date and time of the event</description>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>