force-app/main/default/objects/CampaignMember/fields/Event_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_User_Id__c</fullName>
    <description>Unique user identifier auto-generated by ON24</description>
    <label>Event User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>