force-app/main/default/objects/CampaignMember/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <description>Date and time of last live or archive/on-demand activity</description>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>