force-app/main/default/objects/CampaignMember/fields/Media_Source__c.field-meta.xml
<CustomField>
    <fullName>Media_Source__c</fullName>
    <description>Variable campaign identifier</description>
    <label>Media Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>