force-app/main/default/objects/CampaignMember/fields/Meeting_Conversions_Action__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Conversions_Action__c</fullName>
    <description>Meeting action (e.g. URL of external link)</description>
    <label>Meeting Conversions Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>