force-app/main/default/objects/CampaignMember/fields/Meeting_Conversions_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Conversions_Name__c</fullName>
    <description>User defined name</description>
    <label>Meeting Conversions Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>