force-app/main/default/objects/CampaignMember/fields/Meeting_Conversions_Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Conversions_Submitted_Timestamp__c</fullName>
    <description>Meeting submited timestamp</description>
    <label>Meeting Conversions Submitted Timestamp</label>
    <type>DateTime</type>
</CustomField>