force-app/main/default/objects/CampaignMember/fields/Meeting_Conversions_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Conversions_Type__c</fullName>
    <description>Always &quot;book_a_meeting&quot;</description>
    <label>Meeting Conversions Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>