force-app/main/default/objects/CampaignMember/fields/Poll_Answer_10__c.field-meta.xml
<CustomField>
    <fullName>Poll_Answer_10__c</fullName>
    <description>User-submitted answer to the poll.</description>
    <label>Poll Answer 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>