force-app/main/default/objects/CampaignMember/fields/Poll_Question_10__c.field-meta.xml
<CustomField>
    <fullName>Poll_Question_10__c</fullName>
    <description>Client-determined poll question asked to the audience.</description>
    <label>Poll Question 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>