force-app/main/default/objects/CampaignMember/fields/Poll_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Poll_Question_1__c</fullName>
    <description>Client-determined poll question asked to the audience.</description>
    <label>Poll Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>