force-app/main/default/objects/CampaignMember/fields/Resource_10_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Resource_10_Viewed__c</fullName>
    <description>Name of 10th resource viewed in the Resource Widget</description>
    <label>Resource 10 Viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>