force-app/main/default/objects/CampaignMember/fields/Resource_1_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Resource_1_Viewed__c</fullName>
    <description>Name of 1st resource viewed in the Resource Widget</description>
    <label>Resource 1 Viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>