force-app/main/default/objects/CampaignMember/fields/Resource_2_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Resource_2_Viewed__c</fullName>
    <description>Name of 2nd resource viewed in the Resource Widget</description>
    <label>Resource 2 Viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>