force-app/main/default/objects/CampaignMember/fields/Survey_Answer_10__c.field-meta.xml
<CustomField>
    <fullName>Survey_Answer_10__c</fullName>
    <description>User-submitted answer to the survey question.</description>
    <label>Survey Answer 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>