force-app/main/default/objects/CampaignMember/fields/Survey_Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Survey_Answer_1__c</fullName>
    <description>User-submitted answer to the survey question.</description>
    <label>Survey Answer 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>