force-app/main/default/objects/CampaignMember/fields/Survey_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_1__c</fullName>
    <description>Client-determined survey question asked to the audience.</description>
    <label>Survey Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>