force-app/main/default/objects/CampaignMember/fields/Test_Widget_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Widget_Result__c</fullName>
    <description>Did not attempt, Passed, Failed</description>
    <label>Test Widget Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>