force-app/main/default/objects/CampaignMember/fields/User_Answer_2__c.field-meta.xml
<CustomField>
    <fullName>User_Answer_2__c</fullName>
    <description>Presenter response to user submitted question through Q&amp;A widget</description>
    <label>User Answer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>