force-app/main/default/objects/CampaignMember/fields/User_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_URL__c</fullName>
    <description>URL for Prospect Engagement Profile</description>
    <label>User Profile URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>