force-app/main/default/objects/CampaignMember/fields/User_Question_10__c.field-meta.xml
<CustomField>
    <fullName>User_Question_10__c</fullName>
    <description>User submitted question through Q&amp;A widget</description>
    <label>User Question 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>