force-app/main/default/objects/CampaignMember/fields/User_Question_2__c.field-meta.xml
<CustomField>
    <fullName>User_Question_2__c</fullName>
    <description>User submitted question through Q&amp;A widget</description>
    <label>User Question 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>